# roju_tracer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.bat
.github/workflows/: cmake.yml
src/: HandmadeMath.cpp  HandmadeMath.h  config.cpp  containers.cpp  hitdetection.cpp  hittables.cpp  main.cpp  materials.cpp  math.cpp  pcg_uint128.hpp  renderdata.cpp  stb_image_write.cpp  types.cpp  types.h
